<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@android:color/black"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:layout_weight="2">


        <TextView
            android:id="@+id/txvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="23dp"
            android:text="0"
            android:textColor="@android:color/white"
            android:textSize="72sp"
            app:fontFamily="sans-serif-thin" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="16"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="9dp"
                android:layout_weight="1"
                android:background="@drawable/grey_circle"
                android:text="@string/cancel"
                android:textSize="36sp"
                android:typeface="sans" />

            <Button
                android:id="@+id/btnNegation"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/grey_circle"
                android:text="@string/negation"
                android:textSize="36sp"
                android:typeface="sans" />

            <Button
                android:id="@+id/btnPercent"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/grey_circle"
                android:text="@string/percent"
                android:textSize="36sp"
                android:typeface="sans" />

            <ToggleButton
                android:id="@+id/tglDivide"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="13dp"
                android:layout_weight="1"
                android:background="@drawable/pink_circle"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textOff="@string/divide"
                android:textOn="@string/divide"
                android:textSize="36sp"
                android:typeface="sans" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_weight="16"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="9dp"
                android:layout_weight="1"
                android:background="@drawable/dark_circle"
                android:text="@string/seven"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:typeface="sans" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/dark_circle"
                android:text="@string/eight"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:typeface="sans" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/dark_circle"
                android:text="@string/nine"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:typeface="sans" />

            <ToggleButton
                android:id="@+id/tglMultiply"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="13dp"
                android:layout_weight="1"
                android:background="@drawable/pink_circle"
                android:textColor="@android:color/white"
                android:textOff="@string/multiply"
                android:textOn="@string/multiply"
                android:textSize="36sp"
                android:typeface="sans" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_weight="16"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false">

            <Button
                android:id="@+id/btnFour"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="9dp"
                android:layout_weight="1"
                android:background="@drawable/dark_circle"
                android:text="@string/four"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:typeface="sans" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/dark_circle"
                android:text="@string/five"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:typeface="sans" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/dark_circle"
                android:text="@string/six"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:typeface="sans" />

            <ToggleButton
                android:id="@+id/tglMinus"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="13dp"
                android:layout_weight="1"
                android:background="@drawable/pink_circle"
                android:textColor="@android:color/white"
                android:textOff="@string/minus"
                android:textOn="@string/minus"
                android:textSize="36sp"
                android:typeface="sans" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_weight="16"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="9dp"
                android:layout_weight="1"
                android:background="@drawable/dark_circle"
                android:text="@string/one"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:typeface="sans" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/dark_circle"
                android:text="@string/two"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:typeface="sans" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/dark_circle"
                android:text="@string/three"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:typeface="sans" />

            <ToggleButton
                android:id="@+id/tglPlus"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="13dp"
                android:layout_weight="1"
                android:background="@drawable/pink_circle"
                android:textColor="@android:color/white"
                android:textOff="@string/plus"
                android:textOn="@string/plus"
                android:textSize="36sp"
                android:typeface="sans" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_weight="16"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false">

            <Button
                android:id="@+id/btnZero"
                android:layout_width="13dp"
                android:layout_height="72dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="9dp"
                android:layout_weight="1"
                android:background="@drawable/dark_rectangle"
                android:paddingRight="90dp"
                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:typeface="sans" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="0.5"
                android:background="@drawable/dark_circle"
                android:text="@string/dot"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:typeface="sans" />

            <ToggleButton
                android:id="@+id/tglEqual"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="13dp"
                android:layout_weight="0.5"
                android:background="@drawable/pink_circle"
                android:textColor="@android:color/white"
                android:textOff="@string/equal"
                android:textOn="@string/equal"
                android:textSize="36sp"
                android:typeface="sans" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>